# stoplight-traffic-simulator

./: .gitignore  Cargo.toml  TODO.md  index.html  traffic-sim.d  traffic-sim.js  traffic_sim.js
.fingerprint/ab_glyph-bf19e5970161e466/: lib-ab_glyph  lib-ab_glyph.json
.fingerprint/ab_glyph_rasterizer-0fd662c5cfd21c5b/: lib-ab_glyph_rasterizer  lib-ab_glyph_rasterizer.json
.fingerprint/accesskit-ef40a28f095e2012/: lib-accesskit  lib-accesskit.json
.fingerprint/accesskit_winit-b0100f487cc091c7/: lib-accesskit_winit  lib-accesskit_winit.json
.fingerprint/adler-52f5035e9590ab7e/: lib-adler  lib-adler.json
.fingerprint/ahash-36af7703169844a2/: lib-ahash  lib-ahash.json
.fingerprint/ahash-3be28389e6f54d79/: run-build-script-build-script-build  run-build-script-build-script-build.json
.fingerprint/aho-corasick-1f59c704fe1af9bc/: lib-aho_corasick  lib-aho_corasick.json
.fingerprint/allocator-api2-b096c21275e40f33/: lib-allocator_api2  lib-allocator_api2.json
.fingerprint/approx-8632facfe177028d/: lib-approx  lib-approx.json
.fingerprint/arrayref-bc27bc1f758a565a/: lib-arrayref  lib-arrayref.json
.fingerprint/arrayvec-717bbc4ce2e8211d/: lib-arrayvec  lib-arrayvec.json
.fingerprint/async-broadcast-63f6b0a562592a19/: lib-async_broadcast  lib-async_broadcast.json
.fingerprint/async-fs-360962d5cddd0dcd/: lib-async_fs  (+1 more)
assets/: car.gltf  texture.frag  texture.vert  traffic_light.blend  traffic_light.blend1  traffic_light.gltf  triangle.frag  triangle.vert
src/: camera.rs  car.rs  game.rs  geometry.rs  main.rs  renderer.rs  simulation.rs  traffic_light.rs
(+434 files in other folders)
