[package]
name = "double-pendulum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "lib/gl" }
nalgebra = "0.31.2"
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }

[features]
gl_debug = ["gl/debug"]
